--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citas ISSSTE</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <style>
 
     </style>
@@ -16,6 +16,7 @@
         <div class="botones1">
             <a href="medico/index.html"><button class="enlaces"> Medico</button></a>
             <a href="index.html"><button  class="enlaces">Cita</button></a>
+            <script type="text/javascript" src="script.js"></script>
         </div>
     </nav>
     <header class="content">
@@ -30,7 +31,7 @@
                 <input class="in-one" type="text" id="curp" placeholder="CURP" required>
                 <input class="in-one" type="text" id="nss" placeholder="N° Seguro Social" required>
                 <br>
-                <input class="in-two" type="text" id="correo" placeholder="Correo" required>
+                <input class="in-two" type="text" id="email" placeholder="Correo" required>
                 <select name="medico" id="medico" class="in-two">
                     <option>Médico de cabecéra</option>
                     <option>DR. Dragoberto P.S.</option>
