--- a/index.html
+++ b/index.html
@@ -5,29 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citas ISSSTE</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <style>
-        .content {
-            display: flex;
-            margin-top: 180px;
-        }
-
-        .lado-izquierdo {
-            flex: 2;
-            margin-left: 150px;
-        }
-
-        .lado-izquierdo img {
-            width: 300px;
-            height: auto;
-            border-radius: 30px;
-        }
-
-        .lado-derecho {
-            flex: 4;
-            margin-right: 150px;
-        }
-    </style>
+    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
     <nav class="navegacion">
@@ -35,6 +13,7 @@
         <div class="botones1">
             <a href="medico/index.html"><button class="enlaces"> Medico</button></a>
             <a href="index.html"><button  class="enlaces">Cita</button></a>
+            <script type="text/javascript" src="script.js"></script>
         </div>
     </nav>
     <header class="content">
@@ -43,15 +22,20 @@
         </div>
 
         <div class="lado-derecho">
-            <h1>¡Bienvenido!</h1>
-            <p>Por favor, ingresa tus datos para poder agendar una cita.</p>
-                <input type="text" name="nombre" placeholder="Nombre y apellido" required>
-                <input type="text" name="curp" placeholder="CURP" required>
-                <input type="text" name="telefono" placeholder="Telefono" required>
-                <input type="text" name="correo" placeholder="Correo" required>
-                <input type="text" name="fecha" placeholder="Fecha y hora" required>
-                <input type="text" name="medico" placeholder="Medico" required>
-                <button onclick="agendar()">Agendar cita</button>
+            <h1 class="title-froms">¡Bienvenido!</h1>
+            <p class="text-froms">Por favor, ingresa tus datos para poder agendar una cita.</p>
+                <input class="in-one" type="text" id="nombre" placeholder="Nombre y apellido" required>
+                <input class="in-one" type="text" id="curp" placeholder="CURP" required>
+                <input class="in-one" type="text" id="nss" placeholder="N° Seguro Social" required>
+                <br>
+                <input class="in-two" type="text" id="email" placeholder="Correo" required>
+                <select name="medico" id="medico" class="in-two">
+                    <option>Médico de cabecéra</option>
+                    <option>DR. Dragoberto P.S.</option>
+                </select>
+                <br>
+                <textarea class="in-three" id="motivo" placeholder="Motivo de la consulta" required></textarea>
+                <button class="button-froms" onclick="agendar()">Agendar cita</button>
         </div>
     </header>
 </body>
